# musly

./: .travis.yml  CMakeLists.txt
libmusly/: CMakeLists.txt  powerspectrum.h  resampler.h
libmusly/decoders/: libav.cpp
musly/: CMakeLists.txt  main.cpp
